# PixelToolkit

./: .eslintrc.js  .prettierrc  bun.lockb  components.json  index.html  package-lock.json  package.json  roughness.tsx  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
.erb/configs/: webpack.config.renderer.dev.ts  webpack.config.renderer.prod.ts
.github/: EVENTS.md
release/app/: package-lock.json  package.json
src/: App.tsx  global.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: home.rs  mod.rs  normal_map.rs  utils.rs
src-tauri/src/core/image_process/: mod.rs
src-tauri/src/core/interface/: mod.rs  normal.rs  structs.rs
src-tauri/src/core/project/: mod.rs  structs.rs
src/components/: file-tree-buttons.tsx  unzip-progress.tsx
src/components/navigation/: index.tsx  preferences.tsx
src/components/texture-canvas/: index.tsx
src/components/ui/: dialog.tsx  menubar.tsx  select.tsx  sonner.tsx
src/lib/: filter-trees.ts  toast.tsx  use-keyboard-shortcut.ts  utils.ts
src/lib/core/: index.tsx
src/main/: cofig-dir.ts  config-dir.ts  main.ts  menu.ts  preload.ts
src/main/ipc-events/: create.ts  index.ts  project.ts  workspace.ts
src/renderer/: App.css  App.tsx  index.ejs  index.tsx
src/renderer/Screens/: Home.tsx  test.tsx
src/renderer/lib/: custom-context-menu.tsx
src/renderer/utils/: filter-tree.ts  similarity.ts  title.ts
src/screens/: home.tsx
src/types/: home.d.ts  index.d.ts  interface.ts  project.d.ts
(+39 files in other folders)
