[package]
name = "pixel-toolkit"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pixel_toolkit_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
tauri-plugin-os = "2.0.0-rc"
fork = "0.2.0"
tauri-plugin-dialog = "2.0.0-rc"
chrono = "0.4.38"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
zip = "0.6"
image = "0.25.2"
rayon = "1.10"
tokio = "1.40.0"
anyhow = "1.0.87"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.0.0-rc"

